removed margin between h1 and p and reduced home content p font size

--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -46,8 +46,8 @@
   margin-bottom: 50px;
 }
 
-.home-content h1 {
-  margin-bottom: 20px;
+.home-content p {
+  font-size: 14px;
 }
 
 .home-content p,
