added min height to the home right and left section,and reduced h2 size in home section

--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -104,6 +104,17 @@
   margin-top: 20px;
 }
 
+.home-right-section,
+.home-left-section {
+  min-height: 220px;
+}
+
+.home-section h2,
+.home-section-unhidden h2,
+.home-section-hidden h2 {
+  font-size: 1.2rem;
+}
+
 @media screen and (min-width: 1024px) {
   .home-section-hidden {
     display: none;
