--- a/src/Components/LogIn.css
+++ b/src/Components/LogIn.css
@@ -15,6 +15,11 @@
     justify-content: center;
     align-items: center;
   }
+  .loginimage h2 {
+    font-size: 80px; 
+    font-weight: bold;
+    color: #fff; 
+  }
   
   .loginform {
     flex: 1;
@@ -25,4 +30,7 @@
   .loginform h2 {
     font-weight: bold;
     font-size: xx-large;
+  }
+  .loginform input {
+    margin-bottom: 10px;
   }
