--- a/src/Components/Contact.css
+++ b/src/Components/Contact.css
@@ -16,6 +16,10 @@ body {
   border-radius: 8px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
 }
+.header{
+  text-align: center;
+  color: white;
+}
 
 label {
   font-weight: bold;
@@ -81,3 +85,4 @@ button:hover {
   }
 }
 */
+
