Modified these files to have uniform styles and be able to link with each other

--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -13,7 +13,7 @@
 }
 
 .home-main {
-  background-image: url("https://tinyurl.com/22xh5jm9");
+  background-image: url("https://tinyurl.com/2ax2872d");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
