--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -1,74 +1,76 @@
-
 .footer-container {
-    display: flex;
-    flex-direction: column;
-    border: 1px solid #000;
-    background-color: #1a202c;
-    color: #fff;
-    gap: 20px;
-    padding: 28px;
-    width: 100%;
-  }
-  
-  
-  .footer-top {
-    display: flex;
-    gap: 10px;
-    justify-content: space-between;
-  }
-  
-  
-  .brand-title {
-    font-weight: bold;
-    font-size: 24px;
-    margin-bottom: 10px;
-  }
-  
-  .brand-description {
-    font-size: 14px;
-    color: #8b8e95;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #000;
+  background-color: #1a202c;
+  color: #fff;
+  gap: 10px;
+  padding: 20px;
+  width: 100%;
+}
 
-  .social-icons {
-    display: flex;
-    gap: 3px;
-  }
-  
-  
-  .social-icon-container {
-    cursor: pointer;
-  }
-  
+.footer-top {
+  display: flex;
+  gap: 10px;
+  justify-content: space-between;
+}
 
-  .footer-bottom {
-    display: flex;
-    gap: 10px;
-    justify-content: space-between;
-  }
-  
-  
-  .footer-column {
-    flex: 1;
-  }
-  
+.brand-title {
+  font-weight: bold;
+  font-size: 20px;
+  margin-bottom: 8px;
+}
 
-  .footer-header {
-    font-weight: bold;
-    margin-bottom: 10px;
-    letter-spacing: 1px;
-    font-size: 20px;
-  }
-  
-  
-  .footer-list {
-    list-style: none;
-    line-height: 1.5;
-    margin-left: 0;
-  }
-  
+.brand-description {
+  font-size: 12px;
+  color: #8b8e95;
+}
 
-  .footer-list li {
-    color: #8b8e95;
-  }
-  
+.social-icons {
+  display: flex;
+  gap: 15px;
+}
+
+.social-icon-container {
+  cursor: pointer;
+  transition: transform 0.5s ease;
+}
+
+.social-icon-container:hover {
+  transform: scale(1.3);
+}
+
+.footer-bottom {
+  display: flex;
+  gap: 10px;
+  justify-content: space-between;
+}
+
+.footer-column {
+  flex: 1;
+}
+
+.footer-header {
+  font-weight: bold;
+  margin-bottom: 8px;
+  letter-spacing: 1px;
+  font-size: 16px;
+}
+
+.footer-list {
+  list-style: none;
+  line-height: 1.5;
+  margin-left: 0;
+}
+
+.footer-list li {
+  color: #8b8e95;
+}
+
+.footer-copyright {
+  text-align: center;
+  margin-top: 20px;
+  color: white;
+  font-size: 16px;
+  transition: color 0.3s ease;
+}
