--- a/src/Components/LogIn.css
+++ b/src/Components/LogIn.css
@@ -7,7 +7,7 @@
   
   .loginimage {
     flex: 1;
-    background-image: url('https://images.hdqwalls.com/wallpapers/nature-background.jpg'); 
+    /* background-image: url('https://images.hdqwalls.com/wallpapers/nature-background.jpg');  */
     background-size: cover;
     background-position: center;
     height: 100%;
