Edited the README with an overview of this Project

--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -13,7 +13,7 @@
 }
 
 .home-main {
-  background-image: url("https://tinyurl.com/2ax2872d");
+  background-image: url("https://tinyurl.com/26tsfvp4");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
