--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -45,9 +45,10 @@
   margin-top: 25px;
   margin-bottom: 50px;
 }
-
-.home-content p {
-  font-size: 14px;
+.home-content h1{
+  font-size: 25px;
+  font-weight: bold;
+  color: #000;
 }
 
 .home-content p,
@@ -93,9 +94,18 @@
   width: 500px;
   height: 200px;
 }
+.home-right-section h2{
+  color: #000;
+  font-weight: bold;
+
+}
 
 .home-left-section {
    width: 600px;
+}
+.home-left-section h2 {
+  color: #000;
+    font-weight: bold;
 }
 
 .home-section p,
